[package]
name = "dyno_tag_manager"
version = "0.1.0"
authors = ["Christian Goldapp <c.goldapp@tu-bs.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.9.18"
url = "1.7.2"